...
                    when (passwordIsVisible) {

                        true -> {

                            Icon(
                                painter = painterResource(R.drawable.visibility_on),
                                contentDescription = "Icon 'visibility on'",
                                tint = White
                            )
                        }

                        false -> {

                            Icon(
                                painter = painterResource(R.drawable.visibility_off),
                                contentDescription = "Icon 'visibility off'",
                                tint = White
                            )
                        }
                    }
                },
            )
...

    AnimatedVisibility(
        visible = viewState is SignUpPasswordHintViewState.Visible,
        content = {

            Column(
                modifier = Modifier.width(300.dp).testTag("SignUpPasswordTextFieldHint impl"),
                verticalArrangement = Arrangement.Top,
                horizontalAlignment = Alignment.Start,
                content = {

                    verticalDivider5()

...

                        is SignUpPasswordHintViewState.Visible -> {

                            passwordRequirement(
                                isGreen = viewState.totalCharacters.isGreen,
                                content = "${viewState.totalCharacters.currentCount}/${stringResource(R.string.at_least)} ${PasswordRequirements.MIN_CHARACTERS_COUNT} ${stringResource(R.string.characters)}",
                                testTag = "totalCharacters"
                            )

                            passwordRequirement(
                                isGreen = viewState.uppercaseCharacters.isGreen,
                                content = "${viewState.uppercaseCharacters.currentCount}/${stringResource(R.string.at_least)} ${PasswordRequirements.MIN_UPPERCASE_COUNT} ${stringResource(R.string.uppercase_letters)}",
                                testTag = "uppercaseCharacters"
                            )

                            passwordRequirement(
                                isGreen = viewState.specialCharacters.isGreen,
                                content = "${viewState.specialCharacters.currentCount}/${stringResource(R.string.at_least)} ${PasswordRequirements.MIN_SPECIAL_CHARACTER_COUNT} ${stringResource(R.string.special_character)}",
                                testTag = "specialCharacters"
                            )

                            passwordRequirement(
                                isGreen = viewState.numericCharacters.isGreen,
                                content = "${viewState.numericCharacters.currentCount}/${stringResource(R.string.at_least)} ${PasswordRequirements.MIN_NUMERIC_CHARACTER_COUNT} ${stringResource(R.string.numeric_character)}",
                                testTag = "numericCharacters"
                            )
                        }

                        else -> {}
                    }
                }
...
