...

    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(Background)
            .padding(Padding.P20)
            .testTag("SignUpScreen"),

        verticalArrangement = Arrangement.SpaceBetween,
        horizontalAlignment = Alignment.CenterHorizontally,

        content = {

...
                horizontalAlignment = Alignment.CenterHorizontally,

                content = {

                    emailTextField(
                        email = credentials.email,
                        testTag = "SignUpScreen - emailTextField",
                        onValueChange = { onUpdateEmail(EmailCredential(email = it)) },
                        emailFocusRequester = emailFocusRequester,
                        onFocusChanged = {},
                        onDone = {}
                    )

                    signUpEmailTextFieldHint(viewState = emailHintViewState)

                    verticalDivider10()

                    passwordTextField(
                        password = credentials.password,
                        testTag = "SignUpScreen - passwordTextField",
                        onValueChange = { onUpdatePassword(PasswordCredential(password = it)) },
                        assignedFocusRequester = passwordFocusRequester,
                        onFocusChanged = { onFocusChanged(it) },
                        onDone = {}
                    )

...

                    verticalDivider20()

                    buttonProceed(
                        content = stringResource(string.sign_up),
                        buttonProceedViewState = buttonProceedViewState,
                        testTag = "SignUpScreen button 'Sign up'",
                        onClick = { onSignUp() }
                    )
                }
            )

            // lower part
...
